fixed position mobile menu

--- a/themes/throne-child/css/responsive.css
+++ b/themes/throne-child/css/responsive.css
@@ -64,7 +64,7 @@
 .featured_4 .featured_element{width:24.8%;}
 .nav-btn{display: block;}
 #nav{display: none;}
-.header-main{height: 60px !important; text-align: center;}
+.header-main{height: 60px !important; text-align: center; position:fixed;}
 .logo_wrapper{display: block;top: 6px !important; margin: 0 auto; left:0px; right:0px;}
 .header-sticky.header-is-sticky .logo_wrapper{top: 2px !important;}
 .site-desc{display: none;}
@@ -242,7 +242,6 @@ th, td{padding: 5px;}
 
 .featured_wrapper {
     margin-bottom: 0px;
-    margin-top: -10px;
 }
 	
 .single .meta-share{display: none;}
